--- a/tools/storybook/package.json
+++ b/tools/storybook/package.json
@@ -20,19 +20,23 @@
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.5",
-    "@storybook/addon-a11y": "^7.0.12",
-    "@storybook/addon-essentials": "^7.0.12",
-    "@storybook/addon-interactions": "^7.0.12",
-    "@storybook/addon-links": "^7.0.12",
-    "@storybook/addon-styling": "^1.0.8",
-    "@storybook/blocks": "^7.0.12",
-    "@storybook/react": "^7.0.12",
-    "@storybook/react-webpack5": "^7.0.12",
+    "@storybook/addon-a11y": "^7.0.20",
+    "@storybook/addon-actions": "^7.0.20",
+    "@storybook/addon-console": "^2.0.0",
+    "@storybook/addon-essentials": "^7.0.20",
+    "@storybook/addon-interactions": "^7.0.20",
+    "@storybook/addon-links": "^7.0.20",
+    "@storybook/addon-styling": "^1.3.0",
+    "@storybook/blocks": "^7.0.20",
+    "@storybook/manager-api": "^7.0.20",
+    "@storybook/react": "^7.0.20",
+    "@storybook/react-webpack5": "^7.0.20",
     "@storybook/testing-library": "^0.1.0",
+    "@storybook/theming": "^7.0.20",
     "prop-types": "^15.8.1",
     "react-dom": "^18.2.0",
     "sass": "^1.62.1",
-    "storybook": "^7.0.12",
+    "storybook": "^7.0.20",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4"
   }
