--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -5,7 +5,7 @@
   "exports": {
     ".": "./src/index.ts"
   },
-  "typings": "",
+  "typings": "./src/@types/core.d.ts",
   "scripts": {
     "test": "vitest"
   },
@@ -13,11 +13,17 @@
   "author": "Command_maker",
   "license": "ISC",
   "dependencies": {
-    "@electron/asar": "^3.2.4"
+    "decompress": "^4.2.1",
+    "rimraf": "^5.0.1"
   },
   "devDependencies": {
+    "@types/decompress": "^4.2.4",
     "@types/node": "^20.3.1",
     "typescript": "^5.1.3",
     "vitest": "^0.32.2"
+  },
+  "peerDependencies": {
+    "react-router-dom": "^6.x",
+    "react": "^18.x"
   }
 }
