ref: add copyrights & LICENCE fix(eslint): fix indents conflicts with Prettier & some exclusions

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,10 +16,7 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "indent": [
-            "error",
-            4
-        ],
+        "indent": "off",
         "linebreak-style": [
             "error",
             "unix"
