--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -8,7 +8,7 @@
   },
   "typings": "./src/@types/index.d.ts",
   "author": "Command_maker",
-  "license": "ISC",
+  "license": "GPL-3.0-or-later",
   "devDependencies": {
     "@types/react": "^18.2.6",
     "typescript": "^5.0.4"
