--- a/tools/storybook/package.json
+++ b/tools/storybook/package.json
@@ -10,7 +10,7 @@
   },
   "keywords": [],
   "author": "Command_maker",
-  "license": "ISC",
+  "license": "GPL-3.0-or-later",
   "dependencies": {
     "@meast/themes": "workspace:^",
     "@meast/ui": "workspace:^",
